src/objects/Band__c.object
<CustomObject>
    <fields>
        <fullName>ManagerPhoneNumber__c</fullName>
        <label>ManagerPhoneNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>set_time__c</fullName>
        <label>set_time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4p.m - 7p.m</fullName>
                </value>
                <value>
                    <fullName>8p.m - 10p.m</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>stage</label>
        <referenceTo>Stages__c</referenceTo>
        <relationshipLabel>Band</relationshipLabel>
        <relationshipName>Band</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Band</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Band Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Band</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>